# openstackinabox

./: .coveragerc  .gitignore  .travis.yml  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-gh-actions.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: index.rst  manager.rst
docs/api/models/: base_db.rst  base_model.rst  index.rst
docs/api/models/cinder/: index.rst  (+1 more)
docs/api/services/: base_service.rst  index.rst
docs/api/utils/: directory.rst  index.rst
docs/changes/: 0.1.rst  index.rst  latest.rst
docs/community/: about.rst  contribute.rst  faq.rst  help.rst  index.rst
docs/user/: install.rst  intro.rst  quickstart.rst  tutorial-first-step.rst  tutorial.rst
openstackinabox/: __init__.py  manager.py
openstackinabox/models/: __init__.py  base_db.py  base_model.py
openstackinabox/services/: __init__.py  base_service.py  base_subservice.py
openstackinabox/tests/: base.py  test_base_service.py  test_base_subservice.py  test_get_admin_user.py  test_keystone.py  test_keystone_v2_apikey_auth.py  test_keystone_v2_get_user_credentials.py  test_keystone_v2_password_auth.py  test_keystone_v2_reset_apikey.py  test_keystone_v2_tenants.py  test_keystone_v2_token_auth.py  test_keystone_v2_user_add.py  test_keystone_v2_user_add_credentials.py  test_keystone_v2_user_delete.py  test_keystone_v2_user_get.py  test_keystone_v2_user_listing.py  test_keystone_v2_user_update.py  test_manager.py  test_model_basic.py
openstackinabox/utils/: directory.py
tools/: flake8-requirements.txt  lint-requirements.txt  test-requirements.txt
(+108 files in other folders)
