[nosetests]
match=^test
where=openstackinabox
with-coverage=true
cover-package=openstackinabox
cover-erase=1
cover-inclusive=true
cover-branches=true
cover-min-percentage=30

[metadata]
name = openstackinabox
url = https://github.com/TestInABox/openstackinabox
version = attr: openstackinabox.version
author = Benjamen R. Meyer
author_email = bm_witness@yahoo.com
description = OpenStack APIs for the Stack-In-A-Box Testing Suite
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing

[options]
zip_safe = True
packages = find:
install_requires =
    six
    stackinabox>=0.13

[options.packages.find]
exclude =
    tests*
    openstackinabox/tests
